<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1F1F1F"
    tools:context=".AddContactActivity">

    <TextView
        android:id="@+id/textView_contact_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="15dp"
        android:text="@string/add_contact"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/materialCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="49dp"
        app:cardCornerRadius="120dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/editText_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_contact_details"
        app:strokeWidth="0dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@mipmap/ic_contact_round" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textView_input_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="22dp"
        android:text="@string/contact_name"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_name"
        app:layout_constraintEnd_toStartOf="@+id/editText_name"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_input_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="24dp"
        android:text="@string/last_name"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextText_last_name"
        app:layout_constraintEnd_toStartOf="@+id/editTextText_last_name"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_input_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="23dp"
        android:shadowColor="@color/white"
        android:text="@string/contact_number"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/editText_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText_phone" />

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/input_background_color"
        android:backgroundTintMode="src_over"
        android:ems="10"
        android:hint="@string/hint_contact_name"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/ic_add_contact_background"
        app:layout_constraintBottom_toTopOf="@+id/editTextText_last_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_input_name"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

    <EditText
        android:id="@+id/editTextText_last_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="26dp"
        android:backgroundTint="@color/input_background_color"
        android:backgroundTintMode="src_over"
        android:drawableTint="@color/input_background_color"
        android:drawableTintMode="add"
        android:ems="10"
        android:foregroundTint="@color/input_background_color"
        android:hint="@string/hint_last_name"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/ic_add_contact_background"
        app:layout_constraintBottom_toTopOf="@+id/editText_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_input_last_name"
        app:layout_constraintTop_toBottomOf="@+id/editText_name" />

    <EditText
        android:id="@+id/editText_phone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="165dp"
        android:backgroundTint="@color/input_background_color"
        android:ems="10"
        android:hint="@string/hint_contact_number"
        android:inputType="phone"
        android:textColor="@color/white"
        android:textColorHint="@color/ic_add_contact_background"
        app:layout_constraintBottom_toTopOf="@+id/button_guardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_input_phone"
        app:layout_constraintTop_toBottomOf="@+id/editTextText_last_name" />

    <Button
        android:id="@+id/button_guardar"
        android:layout_width="192dp"
        android:layout_height="0dp"
        android:layout_marginBottom="56dp"
        android:backgroundTint="#03A9F4"
        android:text="@string/contact_save"
        android:textSize="24sp"
        app:iconPadding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_phone" />


</androidx.constraintlayout.widget.ConstraintLayout>
